force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <label>Client/Supplier</label>
    <nameField>
        <label>Client/Supplier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients/Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>