force-app/main/default/objects/Supplier__c/fields/Acc_Country__c.field-meta.xml
<CustomField>
    <fullName>Acc_Country__c</fullName>
    <label>Acc Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>