force-app/main/default/objects/Supplier__c/fields/Acc_Global_Location__c.field-meta.xml
<CustomField>
    <fullName>Acc_Global_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acc Global Location</label>
    <referenceTo>Global_Location__c</referenceTo>
    <relationshipLabel>Clients/Suppliers</relationshipLabel>
    <relationshipName>Clients_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>