force-app/main/default/objects/Supplier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients/Fournisseurs</relationshipLabel>
    <relationshipName>Clients_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>