force-app/main/default/objects/Supplier__c/fields/Admin_Global_Location__c.field-meta.xml
<CustomField>
    <fullName>Admin_Global_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Global Location</label>
    <referenceTo>Global_Location__c</referenceTo>
    <relationshipLabel>Clients/Suppliers (Admin Global Location)</relationshipLabel>
    <relationshipName>Clients_Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>