force-app/main/default/objects/Supplier__c/fields/Country_origin__c.field-meta.xml
<CustomField>
    <fullName>Country_origin__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Give the reference country for the supplier.
Can be different to the country adresses of the supplier</description>
    <inlineHelpText>Pays de référence du fournisseur. Peut être différente du pays d&apos;adresse du fournisseur.</inlineHelpText>
    <label>Country origin</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Country_origin__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group, Country, Region</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>