force-app/main/default/objects/Supplier__c/fields/Is_Default_NegoScope__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_NegoScope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Take the default Nego Scope only for the supplier (= the whole supplier)</description>
    <inlineHelpText>Si sélectionner, un NS global va être créer automatiquement .</inlineHelpText>
    <label>Default Nego Scope (all)</label>
    <type>Checkbox</type>
</CustomField>