force-app/main/default/objects/Supplier__c/fields/Portal_Access_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the Client/Supplier should have access to myConnect platform</description>
    <inlineHelpText>Specify if the Client/Supplier should have access to myConnect platform</inlineHelpText>
    <label>Portal Access Authorization</label>
    <type>Checkbox</type>
</CustomField>