force-app/main/default/objects/Supplier__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Supplier reference web site</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>