force-app/main/default/objects/Supplier__c/listViews/CPG_01_Clients.listView-meta.xml
<ListView>
    <fullName>CPG_01_Clients</fullName>
    <columns>NAME</columns>
    <columns>Logo__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Supplier__c.Client</value>
    </filters>
    <filters>
        <field>Code__c</field>
        <operation>notContain</operation>
        <value>IND-</value>
    </filters>
    <label>01 Les Clients</label>
</ListView>