force-app/main/default/objects/Supplier__c/listViews/O1Suppliers.listView-meta.xml
<ListView>
    <fullName>O1Suppliers</fullName>
    <columns>Logo__c</columns>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Supplier__c.Supplier</value>
    </filters>
    <label>02 Les Fournisseurs</label>
</ListView>